# Linear-DG-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  info.txt
data/2D/CavityCylinderFlow/: rectangle_with_center_circle0.025.off
data/2D/CycleBoundary/: triangleMesh0.0125.off
data/3D/CycleBoundary/: tetrahedral_mesh.off
demo/: 2D_LDG_CB.cpp  2D_LDG_CCF.cpp  3D_LDG_CB.cpp  CMakeLists.txt
doc/DG_2D/: DG.aux  DG.synctex.gz.sum.synctex  DG_2D.aux  DG_2D.tex
doc/DG_3D/: DG.aux  DG_3D.aux  DG_3D.tex
include/LinearDGSolver2D/: LinearDGSolver2D.h  LinearDGSolver2DCavityCylinderFlow.h  LinearDGSolver2DCavityObstacleFlow.h  LinearDGSolver2DCycleBoundary.h
include/LinearDGSolver3D/: LinearDGSolver3D.h  LinearDGSolver3DCycleBoundary.h
include/mesh_structure/: TetrahedronMesh.h  TriangleMesh.h
mesh/: TetrahedronMeshGenerationOfCycleBoundary.py  TriangleMeshGenerationOfCavityCylinderFlow.py  TriangleMeshGenerationOfCycleBoundary.py  extract_tetrahedral_surface_mesh_with_meshio.py  tetra_off_transform.py  tetrahedronMesh0.2.msh
pymodule/: CMakeLists.txt  DG_2D_binding.cpp  DG_3D_binding.cpp
pymodule/testPyModule/: 2D_LDG_CB.py  2D_LDG_CCF.py  3D_LDG_CB.py
result/2D/CavityCylinderFlow/: 0s_result.vtk  1s_result.vtk  2s_result.vtk  3.5s_result.vtk
result/3D/CycleBoundary/: 0s_result.vtk  1s_result.vtk  2s_result.vtk
result/static/: dgdraw.py  err.md  err.txt  static_order.py
src/LinearDGSolver2D/: CMakeLists.txt  LinearDGSolver2D.cpp  LinearDGSolver2DCavityCylinderFlow.cpp  LinearDGSolver2DCavityObstacleFlow.cpp  LinearDGSolver2DCycleBoundary.cpp
src/LinearDGSolver3D/: CMakeLists.txt  LinearDGSolver3D.cpp  LinearDGSolver3DCycleBoundary.cpp
src/Utils/: CMakeLists.txt  GeometryUtils.cpp
src/mesh_structure/: CMakeLists.txt  TetrahedronMesh.cpp  TriangleMesh.cpp
test/: test_barx_in_tetrahedron.py  test_edge_shift.cpp  test_tetra_volume.py  test_tetra_volume_grad.cpp  test_tetra_volume_grad_with_torch.py
